--- a/src/App.css
+++ b/src/App.css
@@ -31,8 +31,18 @@ width: 50%;
 }
 
 #itemDetail{
-  margin: 0%;
+  margin-left: 38%;
   text-align: center;
   align-items: center;
   align-self: center;
+  
+}
+
+/* cart */
+
+.cardContainerCart{
+
+width: 50%;
+
+
 }
